fix: bigger modal z-index

--- a/src/content-script/index.scss
+++ b/src/content-script/index.scss
@@ -13,6 +13,7 @@
   right: 0;
   width: 420px;
   min-height: 340px;
+  z-index: 10000;
 }
 
 .crx-toggle-button {
